Checkpoint ArcLink updates
